# avt_vimba_camera

./: CHANGELOG.rst  CMakeLists.txt  LICENSE.md  README.md  package.xml  plugins.xml
.circleci/: config.yml
.github/workflows/: msvc-analysis.yml
avt_vimba_camera/: CMakeLists.txt  package.xml
avt_vimba_camera/config/: usb_1800_U.yaml
avt_vimba_camera/include/avt_vimba_camera/: avt_vimba_camera.hpp  mono_camera_node.hpp
avt_vimba_camera/launch/: Mako_G-319.launch.xml  mono_camera.launch.xml  stereo_camera.launch.xml  trigger_node.launch.xml
avt_vimba_camera/src/: avt_vimba_camera.cpp  frame_observer.cpp  mono_camera_node.cpp
avt_vimba_camera/src/exec/: trigger_exec.cpp
avt_vimba_camera_msgs/: CMakeLists.txt  package.xml
avt_vimba_camera_msgs/srv/: LoadSettings.srv  SaveSettings.srv
calibrations/: calibration_50-0503343289.yaml  calibration_example.yaml
cfg/: AvtVimbaCamera.cfg
config/: Mako_G-319.yaml  params.yaml
include/avt_vimba_camera/: avt_vimba_api.h  avt_vimba_camera.h  avt_vimba_camera.hpp  mono_camera.h  mono_camera_node.hpp  mono_camera_nodelet.h  sync.h  trigger.h
launch/: Mako_G-319.launch  mono_camera.launch  mono_camera_nodelet.launch  stereo_camera.launch  stereo_camera_two_nodes.launch  trigger_node.launch
src/: avt_vimba_camera.cpp  frame_observer.cpp  mono_camera.cpp  mono_camera_node.cpp  sync.cpp  trigger.cpp  trigger_node.cpp
src/exec/: mono_camera_exec.cpp
src/nodes/: mono_camera_node.cpp  mono_camera_nodelet.cpp  sync_node.cpp  trigger_node.cpp
vimba_libs/: CMakeLists.txt  README.md
