<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>avt_vimba_camera_msgs</name>
  <version>2001.1.0</version>
  <description>Message definitions for controlling Allied Vision Technologies (AVT) cameras</description>
  <license>BSD</license>

  <author email="gbartyzel@hotmail.com">Grzegorz Bartyzel</author>
  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Team</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>std_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
